; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_iova.c_iova_get_pad_size.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pci/extr_iova.c_iova_get_pad_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @iova_get_pad_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @iova_get_pad_size(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @ilog2(i32 %7)
  store i32 %8, i32* %6, align 4
  %9 = load i32, i32* %6, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %17

11:                                               ; preds = %2
  %12 = load i32, i32* %4, align 4
  %13 = add i32 %12, 1
  %14 = load i32, i32* %6, align 4
  %15 = shl i32 1, %14
  %16 = urem i32 %13, %15
  store i32 %16, i32* %5, align 4
  br label %17

17:                                               ; preds = %11, %2
  %18 = load i32, i32* %5, align 4
  ret i32 %18
}

declare dso_local i32 @ilog2(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
